--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/100000000797141/.netbeans/8.2/build.properties
+user.properties.file=/home/chavesfop/.netbeans/8.2/build.properties
